--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut" href="assets/img/favicon.png">
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js" defer></script>
-    <link rel="stylesheet" href="assets/scss/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Travel</title>
 </head>
 <body>
@@ -354,7 +354,7 @@
 
                    <form action="" class="subscribe__form">
                        <input type="email" placeholder="Email" class="subscribe__input">
-                       <button class="button" class= "subscribe__btn">
+                       <button class="button subscribe__btn">
                            Subscribe
                        </button>
                    </form>
